src/test/ui/issues/issue-31924-non-snake-ffi.stderr
error: compilation successful
  --> $DIR/issue-31924-non-snake-ffi.rs:18:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

