src/test/ui/issues/issue-31924-non-snake-ffi.rs
// compile-pass
// skip-codegen
#![deny(non_snake_case)]
#[no_mangle]
pub extern "C" fn SparklingGenerationForeignFunctionInterface() {}


fn main() {}
